# pst-slicer

./: README.md  bootstrap  ost2pst  pst-slicer  pst-slicer-baseline  pst-slicer-intersect  pst-slicer-verify  pyproject.toml
docs/: cli-and-config.md  companion-tools.md  forensic-soundness.md  match-modes.md  output-and-manifest.md  testing.md
src/pst_slicer/: __init__.py  __main__.py  baseline.py  cli.py  cli_help.py  config.py  eml.py  extract.py  intersect.py  log.py  manifest.py  palette.py  pst.py  verify.py
src/pst_slicer/modes/: __init__.py  attachment_ext.py  base.py  imid.py  keyword.py  sender.py  sender_domain.py
