[project]
name = "pst-slicer"
# PEP 440 twin of the CalVer in pst_slicer/__init__.py (leading zeros
# stripped so hatchling accepts it). Nothing user-facing reads this;
# see pst_slicer.__version__ for the authoritative display string.
version = "26.7"
description = "Forensic PST message extractor: config-driven, matches by IMID / keyword / sender / sender-domain / attachment-extension, emits intact EML files with a TSV manifest and run log."
requires-python = ">=3.13"
authors = [
    { name = "Forensic Foundry" },
]
license = { text = "GPL-3.0-or-later" }
dependencies = [
    "libpff-python>=20231205",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pst_slicer"]
